# Sudoku

./: .gitignore  README.md  build.bat  game_Requirement.txt  links.txt  pyproject.toml  requirements.txt  sprite.py  sprite2.py  sprite3.py  sudoku_solver.py  test.py  win2.py  win3.py  win5.py
src/: GameScreens.py  ScreenManager.py  audio.py  log_tracker.py  main.py  menu.py  screen.py  speech.py
test_codes/: angle.py  sprite3.py  sudoku_solver.py  test2.py  win.py
