[project]
name = "sudoku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accessible-output2>=0.17",
    "arcade>=3.1.0",
    "cryptography>=44.0.2",
    "nuitka>=2.6.9",
    "numpy>=2.2.4",
    "pyopenal>=0.7.11a1",
]
